`feat` change asList to List.of